chore: fix trivial sonarqube vulnerabilites