@@ -5,7 +5,6 @@ import com.itesm.domain.repository.MedicineRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class GetMedicinesUseCase {
@@ -21,13 +20,13 @@ public class GetMedicinesUseCase {
         return medicineRepository.findAllMedicines().stream()
                 .map(m -> new MedicineDto(
                         m.getId(), m.getGenericName(), m.getDosageForm(), m.getStrength(), m.getPresentation()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MedicineDto> search(String query) {
         return medicineRepository.searchMedicines(query).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private MedicineDto toDto(com.itesm.domain.models.Medicine m) {
